# web-proxy

./: .gitignore  Cargo.toml  Makefile  proxy-overrides.breakpoints.json
.cursor/: settings.json
.cursor/rules/: README.md  agent-doc-sync.mdc  backend-api-test-requirement.mdc  code-style.mdc  project.mdc  react-nextjs.mdc  react.mdc  style.mdc  type-safety.mdc
backend/: Cargo.toml  README.md
backend/src/: README.md  advanced_search.rs  api.rs  api_tests.rs  billing.rs  body_format.rs  breakpoints.rs  hosts.rs  main.rs  mitm.rs  override_identity.rs  overrides.rs  ports.rs  proxy.rs  proxy_tests.rs  request_catalog.rs  request_composer.rs  saved_requests.rs  state.rs  state_tests.rs
backend/src/system_proxy/: README.md  mod.rs
backend/src/system_proxy/network/: README.md  macos.rs  mod.rs
desktop/: package.json  tsconfig.json
desktop/scripts/: prepare-electron-resources.ts  prepare-tauri-sidecar.cjs
desktop/src/: Cargo.toml  main.ts  preload.ts  tauri.conf.json
docs/: override-id.md
docs/agent-reference/: README.md  backend.md  desktop.md  frontend.md  mcp.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/public/: README.md
frontend/src/: App.css  App.tsx  README.md  index.css  main.tsx  types.ts
mcp/: README.md  proxy-mcp-server.mjs
remote-server/: README.md  package.json  tsconfig.json  vite.config.ts
scripts/: run-dev.sh
src/: api.rs  breakpoints.rs  main.rs  mitm.rs  mocks.rs  override_identity.rs  overrides.rs  proxy.rs  state.rs
(+263 files in other folders)
