[package]
name = "proxy-app"
version = "0.1.0"
edition = "2021"
description = "HTTP/HTTPS proxy with a web dashboard, overrides, and breakpoints"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.7", features = ["ws"] }
brotli = "8"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
futures-util = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "tokio"] }
parking_lot = "0.12"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "http3", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
rcgen = { version = "0.14", features = ["pem", "x509-parser", "aws_lc_rs"] }
rustls = "0.23.37"
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs", "tls12"] }
pem = "3"
time = "0.3"
zstd = "0.13"
